--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* @import-normalize; bring in normalize.css styles */
+/* @import-normalize;  */
 
 body {
   margin: 0;
@@ -14,13 +14,65 @@ code {
     monospace;
 }
 .profile {
-  display: inline;
-  width: 350px;
-background-color: blue;
+  display: inline-block;
+  width: 300px;
+  border: 2px solid black;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  border-radius: 1%;
+  margin-left: auto;
+  margin-right: auto;
 }
+.description {
+  font-size: 10px;
+  display: block;
+  text-align: center;
+  font-size: 15px;
+  color: gray;
+}
+.description img {
+  display: block;
+  margin: 20px auto 20px auto;
+  border: 2px solid black;
+  border-radius: 50%;
+  border-color: black;
+}
+.description .name {
+  font-size: 25px;
+}
+.stats {
+  padding: 0;
+  margin: 20px 0px 0px 0px;
+}
+.stats li {
+  display: inline-block;
+  text-align: center;
+  width: 98px;
+  height: 98px;
+  background-color: gray;
+  font-size: 10px;
+  border: 1px solid black;
+}
+.label {
+  display: block;
+  font-size: 15px;
+  margin-top: 30px;
+  text-align: center;
+}
+.quantity {
+  display: block;
+  font-size: 15px;
+  margin-bottom: 15px;
+  text-align: center;
+  font-weight: bold;
+}
+
 .statistics {
+  display: block;
   background-color: brown;
 }
 .friend-list {
   background-color: yellow;
+}
+.transaction-history {
+  background-color: red;
 }
