--- a/src/components/Transactions/index.module.css
+++ b/src/components/Transactions/index.module.css
@@ -1,11 +1,11 @@
-.transaction-history {
+.transactionHistorys {
   display: block;
   margin: 0;
   padding: 0;
   font-size: 15px;
   border: 0.5px solid black;
 }
-.transaction-history thead {
+.transactionHistorys thead {
   display: block;
   background-color: grey;
   width: 462px;
