--- a/src/components/Profile/index.module.css
+++ b/src/components/Profile/index.module.css
@@ -4,8 +4,7 @@
   border: 2px solid black;
   box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   border-radius: 1%;
-  margin-left: auto;
-  margin-right: auto;
+margin-right: 15px;
 }
 .description {
     font-size: 10px;
