--- a/src/components/Statistics/index.module.css
+++ b/src/components/Statistics/index.module.css
@@ -11,12 +11,12 @@
   text-align: center;
   padding: 15px 0px 15px 0px;
 }
-.stat-list {
+.statList {
   display: flex;
   margin: 0;
   padding: 0;
 }
-.stat-list .item {
+.statList .item {
   display: block;
   width: 60px;
   height: 60px;
@@ -24,11 +24,13 @@
   color: white;
 }
 .item .label {
+  display: block;
   margin: 0;
   padding: 15px 0 0 0;
   font-size: 10px;
 }
 .item .percentage {
+  display: block;
   margin: 0;
   padding: 0;
 }
